fix: update font sizes for headings and paragraphs for better readability

--- a/src/styles/inicio.module.css
+++ b/src/styles/inicio.module.css
@@ -49,7 +49,7 @@
   color: var(--color-secundario);
   font-family: var(--fuente-principal);
   font-weight: 800;
-  font-size: var(--text-5xl);
+  font-size: 5.5rem;
   line-height: 1.2;
   text-align: center;
   animation: moverArriba 1s ease-in;
@@ -78,7 +78,6 @@
   color: #181717;
   font-family: var(--fuente-principal);
   font-weight: 600;
-  font-size: var(--text-base);
   text-transform: capitalize;
   animation: moverArriba 1s ease-in;
   background-color: var(--color-primario);
@@ -127,7 +126,7 @@
   }
 
   .home_contenido h1 {
-    font-size: var(--text-6xl);
+    font-size: var(--text-7xl);
     line-height: 1.2;
   }
 
@@ -141,7 +140,7 @@
   }
 
   .home_contenido h1 span {
-    font-size: var(--text-2xl);
+    font-size: var(--text-3xl);
   }
   .home_saludo,
   .home_profesion {
